Actualice BD con campos: categorias y activo

--- a/front_provisorio/post.html
+++ b/front_provisorio/post.html
@@ -32,6 +32,19 @@
                     <label for="precioProd">Precio</label>
                     <input type="number" name="precio" id="precioProd" required>
 
+                    <label for="categoriaProd">Categoria</label>
+                    <select name="categoria" id="categoriaProd" required>
+                        <option value="zapatillas">Calzado</option>
+                        <option value="remera">Indumentaria</option>
+                        <option value="gorra">Accesorios</option>
+                    </select>
+
+                    <label for="activoProd">Activo</label>
+                    <select name="activo" id="activoProd" required>
+                        <option value="true">Sí</option>
+                        <option value="false">No</option>
+                    </select>
+
                     <label for="imagenProd">Imagen</label>
                     <input type="text" name="imagen" id="imagenProd" required>
 
