--- a/front_provisorio/post.html
+++ b/front_provisorio/post.html
@@ -12,11 +12,11 @@
         <div class="sidebar">
             <h2>Sportswear <br> Dashboard</h2>
             <ul>
-                <li><a href="index.html">GET</a></li>
-                <li><a href="get.html">GET: id</a></li>
-                <li><a href="post.html">POST</a></li>
-                <li><a href="put.html">PUT</a></li>
-                <li><a href="delete.html">DELETE</a></li>
+                <li><a href="index.html">TRAER</a></li>
+                <li><a href="get.html">TRAER POR ID</a></li>
+                <li><a href="post.html">CREAR</a></li>
+                <li><a href="put.html">MODIFICAR</a></li>
+                <li><a href="delete.html">ELIMINAR</a></li>
             </ul>
         </div>
         <main id="contenedor-get">
